# JuliOS

./: .bochsrc  .drone.yml  .gitignore  Cargo.toml  Makefile  README.md  x86_64-julios.json
.cargo/: config.toml
grub/: grub.cfg
src/: gdt.rs  interrupts.rs  lib.rs  linker.ld  main.rs  serial.rs  vga.rs
src/boot/: boot.asm
src/drivers/: mod.rs
src/drivers/atapi/: interrupt.rs  mod.rs  scsi.rs
src/drivers/serial/: mod.rs
src/drivers/vga/: mod.rs
src/fd/: mod.rs
src/fs/: mod.rs
src/fs/iso/: fd.rs  iso9660.rs  mod.rs
src/interrupts/: mod.rs
src/interrupts/pic/: disk.rs  keyboard.rs  mod.rs  pit.rs
src/memory/: frame_allocator.rs  gdt.rs  mod.rs
src/memory/heap_alloc/: mod.rs
src/memory/paging/: mod.rs  temporary_page.rs
src/proc/scheduler/: mod.rs
src/proc/thread/: mod.rs
src/syscalls/: ids.rs  io.rs  mod.rs  proc.rs
src/task/: executor.rs  keyboard.rs  mod.rs  spawner.rs  yield_executor.rs
src/utils/: mod.rs  mutex.rs  serialize.rs
tools/: create-iso.sh
